# chess

./: CMakeLists.txt  board.cpp  board.h  chess.pro  elephant.cpp  elephant.h  figure.cpp  figure.h  horse.cpp  horse.h  king.cpp  king.h  main.cpp  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h  step.h
libChess/: CMakeLists.txt  board.cpp  elephant.cpp  figure.cpp  figure.h  horse.h  king.h  libChess.pro  libchess.cpp  libchess.h  libchess_global.h  main.cpp  pawn.cpp  pawn.h  play.cpp  play.h  rook.cpp  step.h
